<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  UVCCamera
  ~  library and sample to access to UVC web camera on non-rooted Android device
  ~
  ~ Copyright (c) 2014-2017 saki t_saki@serenegiant.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~  All files in the folder are under this Apache License, Version 2.0.
  ~  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
  ~  may have a different license, see the respective files.
  -->
<resources>
    <string name="app_name">PerceptIn</string>
    <string name="select">Select Camera</string>
    <string name="camera">Camera</string>
    <string name="refresh">Refresh</string>
    <string name="no_device">No USB camera found</string>
    <string name="quit">Exit</string>
    <string name="select_camera">Select Camera</string>
    <string name="active">Activate</string>
    <string name="cleandata">Purge Data</string>
    <string name="enter_reg">Enter Registration Mode</string>
    <string name="quit_reg">Exit Registration Mode</string>
    <string name="input_name">Input Name</string>
    <string name="reg">Register</string>
    <string name="reg_in">Registered!</string>
    <string name="no_check_face">No Face Detected</string>
    <string name="no_face">No Face Detected</string>
    <string name="have_face">Face Detected</string>
    <string name="quit_app">Confirm Exit</string>
    <string name="clean_data_sucess">Data Purge Successful res=</string>
    <string name="active_success">Activation Successful res=</string>
    <string name="no_face_pleace">No Face Detected!</string>
    <string name="reg_success">Registration Successful res=</string>
    <string name="enter_fail">Fail to Enter</string>
    <string name="quit_fail">Fail to Exit</string>
    <string name="woman">-Female</string>
    <string name="man">-Male</string>
    <string name="unkown">-Unknown</string>
    <string name="id_no_exit">-ID does not exist</string>
    <string name="smile">-Smile</string>
    <string name="normal">-Normal</string>
    <string name="big_smial">-Big Smile</string>
    <string name="sad">-Upset</string>
</resources>
